一个通用的后台管理系统，使用Vue+ElementUI开发--图标抽屉

--- a/.env.development
+++ b/.env.development
@@ -2,5 +2,6 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = 'http://127.0.0.1:10000'
-# VUE_APP_BASE_API = '/dev-api'
+VUE_APP_BASE_HTTP_API = 'http://127.0.0.1:10000/api'
+VUE_APP_BASE_WX_API = 'ws://127.0.0.1:10000/api'
+
