--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,6 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'http://47.114.99.214:10000'
-# VUE_APP_BASE_API = '/prod-api'
+VUE_APP_BASE_HTTP_API = 'http://zeroadmin.herenpeng.com/api'
+VUE_APP_BASE_WX_API = 'ws://zeroadmin.herenpeng.com/api'
 
