--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "0.18.1",
     "core-js": "3.6.5",
+    "codemirror": "5.45.0",
     "echarts": "4.2.1",
     "element-ui": "2.13.2",
     "file-saver": "2.0.1",
@@ -28,7 +29,9 @@
     "vue-count-to": "1.0.13",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
-    "xlsx": "0.14.1"
+    "xlsx": "0.14.1",
+    "jsonlint": "1.6.3",
+    "script-loader": "0.7.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
