一个通用的后台管理系统，使用Vue+ElementUI开发--Github OAuth授权登录功能

--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,7 @@
 ENV = 'development'
 
 # base api
+VUE_APP_GITHUB_CLIENT_ID = 'xxxxxxxxxxxxxxxxxxxxxx'
 VUE_APP_BASE_HTTP_API = 'http://127.0.0.1:10000/api'
 VUE_APP_BASE_WX_API = 'ws://127.0.0.1:10000/api'
 
