--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,7 @@
 ENV = 'production'
 
 # base api
+VUE_APP_GITHUB_CLIENT_ID = 'xxxxxxxxxxxxxxxxxxxxxx'
 VUE_APP_BASE_HTTP_API = 'http://zeroadmin.herenpeng.com/api'
 VUE_APP_BASE_WX_API = 'ws://zeroadmin.herenpeng.com/api'
 
