一个通用的后台管理系统，使用Vue+ElementUI开发--Github OAuth授权登录功能

--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@
 ENV = 'production'
 
 # base api
-VUE_APP_GITHUB_CLIENT_ID = 'xxxxxxxxxxxxxxxxxxxxxx'
+VUE_APP_GITHUB_CLIENT_ID = '4eeb8ec1e2e70c599f5a'
 VUE_APP_BASE_HTTP_API = 'http://zeroadmin.herenpeng.com/api'
 VUE_APP_BASE_WX_API = 'ws://zeroadmin.herenpeng.com/api'
 
