:sparkles:添加了路由检索检索定位功能

--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "xlsx": "0.14.1",
     "jsonlint": "1.6.3",
     "script-loader": "0.7.2",
-    "screenfull": "4.2.0"
+    "screenfull": "4.2.0",
+    "fuse.js": "3.4.4",
+    "pinyin": "2.9.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
