--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
-    "axios": "0.18.1",
+    "axios": "1.6.0",
     "core-js": "3.6.5",
-    "codemirror": "5.45.0",
+    "codemirror": "5.58.2",
     "echarts": "4.2.1",
     "element-ui": "2.13.2",
     "file-saver": "2.0.1",
@@ -52,7 +52,7 @@
     "eslint": "6.7.2",
     "eslint-plugin-vue": "6.2.2",
     "html-webpack-plugin": "3.2.0",
-    "mockjs": "1.0.1-beta3",
+    "mockjs": "1.1.0",
     "runjs": "4.3.2",
     "sass": "1.26.8",
     "sass-loader": "8.0.2",
